Add community forum module with topics, comments, likes, attachments and categories support for SQL Server